--- a/HR_Employee_Retention/Code.ipynb
+++ b/HR_Employee_Retention/Code.ipynb
@@ -13,14 +13,7 @@
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from xgboost import XGBClassifier\n",
-    "from lightgbm import LGBMClassifier\n",
-    "from sklearn.metrics import (classification_report,confusion_matrix, accuracy_score,precision_score,recall_score,f1_score,roc_auc_score)"
+    "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
    "execution_count": 33
@@ -1418,346 +1411,6 @@
    "id": "18662cbe90195005",
    "outputs": [],
    "execution_count": 44
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-30T12:41:59.047403Z",
-     "start_time": "2025-07-30T12:41:59.041250Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "X = df_clean.drop(columns='Attrition')  # X has only features\n",
-    "y = df_clean['Attrition']"
-   ],
-   "id": "bea55a0a0da5f992",
-   "outputs": [],
-   "execution_count": 45
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-30T12:41:59.124847Z",
-     "start_time": "2025-07-30T12:41:59.116341Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.3, random_state=42, stratify=y\n",
-    ")"
-   ],
-   "id": "88249f5b88066001",
-   "outputs": [],
-   "execution_count": 46
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-30T12:41:59.196004Z",
-     "start_time": "2025-07-30T12:41:59.188755Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "y_train = y_train.map({'Yes': 1, 'No': 0})\n",
-    "y_test = y_test.map({'Yes': 1, 'No': 0})"
-   ],
-   "id": "37ed009af44371ae",
-   "outputs": [],
-   "execution_count": 47
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-30T12:41:59.284257Z",
-     "start_time": "2025-07-30T12:41:59.273799Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "binary_map = {\n",
-    "    'Gender': {'Male': 1, 'Female': 0},\n",
-    "    'OverTime': {'Yes': 1, 'No': 0}\n",
-    "}\n",
-    "\n",
-    "for col, mapping in binary_map.items():\n",
-    "    X_train[col] = X_train[col].map(mapping)\n",
-    "    X_test[col] = X_test[col].map(mapping)"
-   ],
-   "id": "564809e44701757f",
-   "outputs": [],
-   "execution_count": 48
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-30T12:41:59.374632Z",
-     "start_time": "2025-07-30T12:41:59.354231Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "one_hot_cols = ['BusinessTravel', 'Department', 'EducationField', 'JobRole', 'MaritalStatus']\n",
-    "X_train = pd.get_dummies(X_train, columns=one_hot_cols, drop_first=True)\n",
-    "X_test = pd.get_dummies(X_test, columns=one_hot_cols, drop_first=True)\n",
-    "X_train, X_test = X_train.align(X_test, join='left', axis=1, fill_value=0)"
-   ],
-   "id": "277fe5d80b8e45b6",
-   "outputs": [],
-   "execution_count": 49
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-30T12:41:59.463737Z",
-     "start_time": "2025-07-30T12:41:59.457007Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "y_train.value_counts()",
-   "id": "b515484425145570",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Attrition\n",
-       "0    863\n",
-       "1    166\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 50
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-30T12:41:59.611224Z",
-     "start_time": "2025-07-30T12:41:59.587565Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "sm = SMOTE(random_state=42)\n",
-    "X_train_resampled, y_train_resampled = sm.fit_resample(X_train, y_train)\n",
-    "print(y_train_resampled.value_counts())"
-   ],
-   "id": "3711e02b11be43cc",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Attrition\n",
-      "0    863\n",
-      "1    863\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
-   "execution_count": 51
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-30T12:41:59.686287Z",
-     "start_time": "2025-07-30T12:41:59.679812Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "y_test.value_counts()",
-   "id": "397349dcb83539eb",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Attrition\n",
-       "0    370\n",
-       "1     71\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 52
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-30T12:42:01.013375Z",
-     "start_time": "2025-07-30T12:41:59.894546Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "models = {\n",
-    "    \"Logistic Regression\": LogisticRegression(max_iter=1000),\n",
-    "    \"Random Forest\": RandomForestClassifier(),\n",
-    "    \"XGBoost\": XGBClassifier(use_label_encoder=False, eval_metric='logloss'),\n",
-    "    \"LightGBM\": LGBMClassifier()}\n",
-    "for name, model in models.items():\n",
-    "    print(f\"\\n Model: {name}\")\n",
-    "    model.fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    y_prob = model.predict_proba(X_test)[:, 1]\n",
-    "    print(\"Confusion Matrix:\")\n",
-    "    print(confusion_matrix(y_test, y_pred))\n",
-    "    print(\"\\n📊 Classification Report:\")\n",
-    "    print(classification_report(y_test, y_pred))\n",
-    "    print(f\"Accuracy  : {accuracy_score(y_test, y_pred):.4f}\")\n",
-    "    print(f\"Precision: {precision_score(y_test, y_pred):.4f}\")\n",
-    "    print(f\"Recall: {recall_score(y_test, y_pred):.4f}\")\n",
-    "    print(f\"F1 Score : {f1_score(y_test, y_pred):.4f}\")\n",
-    "    print(f\"ROC AUC {roc_auc_score(y_test, y_prob):.4f}\")"
-   ],
-   "id": "a7dfbb2aeb9a2a06",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " Model: Logistic Regression\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confusion Matrix:\n",
-      "[[363   7]\n",
-      " [ 53  18]]\n",
-      "\n",
-      "📊 Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.87      0.98      0.92       370\n",
-      "           1       0.72      0.25      0.38        71\n",
-      "\n",
-      "    accuracy                           0.86       441\n",
-      "   macro avg       0.80      0.62      0.65       441\n",
-      "weighted avg       0.85      0.86      0.84       441\n",
-      "\n",
-      "Accuracy  : 0.8639\n",
-      "Precision: 0.7200\n",
-      "Recall: 0.2535\n",
-      "F1 Score : 0.3750\n",
-      "ROC AUC 0.7816\n",
-      "\n",
-      " Model: Random Forest\n",
-      "Confusion Matrix:\n",
-      "[[360  10]\n",
-      " [ 60  11]]\n",
-      "\n",
-      "📊 Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.86      0.97      0.91       370\n",
-      "           1       0.52      0.15      0.24        71\n",
-      "\n",
-      "    accuracy                           0.84       441\n",
-      "   macro avg       0.69      0.56      0.58       441\n",
-      "weighted avg       0.80      0.84      0.80       441\n",
-      "\n",
-      "Accuracy  : 0.8413\n",
-      "Precision: 0.5238\n",
-      "Recall: 0.1549\n",
-      "F1 Score : 0.2391\n",
-      "ROC AUC 0.7525\n",
-      "\n",
-      " Model: XGBoost\n",
-      "Confusion Matrix:\n",
-      "[[356  14]\n",
-      " [ 54  17]]\n",
-      "\n",
-      "📊 Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.87      0.96      0.91       370\n",
-      "           1       0.55      0.24      0.33        71\n",
-      "\n",
-      "    accuracy                           0.85       441\n",
-      "   macro avg       0.71      0.60      0.62       441\n",
-      "weighted avg       0.82      0.85      0.82       441\n",
-      "\n",
-      "Accuracy  : 0.8458\n",
-      "Precision: 0.5484\n",
-      "Recall: 0.2394\n",
-      "F1 Score : 0.3333\n",
-      "ROC AUC 0.7368\n",
-      "\n",
-      " Model: LightGBM\n",
-      "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Number of positive: 166, number of negative: 863\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000321 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
-      "[LightGBM] [Info] Total Bins 1146\n",
-      "[LightGBM] [Info] Number of data points in the train set: 1029, number of used features: 44\n",
-      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.161322 -> initscore=-1.648427\n",
-      "[LightGBM] [Info] Start training from score -1.648427\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\xgboost\\training.py:183: UserWarning: [15:42:00] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
-      "Parameters: { \"use_label_encoder\" } are not used.\n",
-      "\n",
-      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confusion Matrix:\n",
-      "[[359  11]\n",
-      " [ 53  18]]\n",
-      "\n",
-      "📊 Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.87      0.97      0.92       370\n",
-      "           1       0.62      0.25      0.36        71\n",
-      "\n",
-      "    accuracy                           0.85       441\n",
-      "   macro avg       0.75      0.61      0.64       441\n",
-      "weighted avg       0.83      0.85      0.83       441\n",
-      "\n",
-      "Accuracy  : 0.8549\n",
-      "Precision: 0.6207\n",
-      "Recall: 0.2535\n",
-      "F1 Score : 0.3600\n",
-      "ROC AUC 0.7614\n"
-     ]
-    }
-   ],
-   "execution_count": 53
   },
   {
    "metadata": {
