--- a/Conversion_Rate/Code.ipynb
+++ b/Conversion_Rate/Code.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Conversion Rate:\n",
+    "Goal:\n",
+    "Optimizing conversion rate is likely the most common work of a data scientist, and rightfully so.\n",
+    "The data revolution has a lot to do with the fact that now we are able to collect all sorts of data\n",
+    "about people who buy something on our site as well as people who don't. This gives us a\n",
+    "tremendous opportunity to understand what's working well (and potentially scale it even further)\n",
+    "and what's not working well (and fix it).\n",
+    "The goal of this challenge is to build a model that predicts conversion rate and, based on the\n",
+    "model, come up with ideas to improve revenue.\n",
+    "Your project is to:\n",
+    "Predict conversion rate\n",
+    "Come up with recommendations for the product team and the marketing team to\n",
+    "improve conversion rate"
+   ],
+   "id": "419e1802a8b9e2a3"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-08-01T09:34:11.086832Z",
@@ -8,6 +28,8 @@
     }
    },
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": 54,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -17,9 +39,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
    ],
-   "id": "c820326d70d3a544",
-   "outputs": [],
-   "execution_count": 54
+   "id": "c820326d70d3a544"
   },
   {
    "metadata": {
@@ -953,6 +973,29 @@
     }
    ],
    "execution_count": 63
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Recommendations :\n",
+    "The product team should focus on improving the experience for new users since that’s one of\n",
+    "the most important factors for conversion. This could mean making onboarding easier with\n",
+    "tutorials or guided tours and testing different ways to welcome first-time users. Also, traffic\n",
+    "sources like direct visits, SEO, and ads play a big role, so it’s important to make sure the landing\n",
+    "pages for these channels are clear and relevant. Encouraging users to explore more pages on\n",
+    "the site can help too, by making the site easy to navigate and adding things like pop-ups that\n",
+    "encourage people to convert before leaving.\n",
+    "For the marketing team, targeting the Chinese market is key because users from China are\n",
+    "converting the most. This means adapting content, payment options, and support specifically\n",
+    "for Chinese customers, and maybe working with local partners or influencers. Since direct\n",
+    "traffic converts well, it’s a good idea to invest in brand awareness to get more people visiting\n",
+    "directly. SEO should also keep being a priority by focusing on important keywords, and paid ads\n",
+    "need to be optimized to match landing pages better. Finally, marketing campaigns should be\n",
+    "customized for different countries like the US, UK, and China, and also use age groups wisely\n",
+    "since age is another important factor in conversion."
+   ],
+   "id": "19bdb79c14c43713"
   },
   {
    "metadata": {},
