--- a/HR_Employee_Retention/Code.ipynb
+++ b/HR_Employee_Retention/Code.ipynb
@@ -1,8 +1,29 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### HR Employee Retention\n",
+    "Goal:\n",
+    "Employee turn-over is a very costly problem for companies. The cost of replacing an employee\n",
+    "if often larger than 100K USD, taking into account the time spent to interview and find a\n",
+    "replacement, placement fees, sign-on bonuses and the loss of productivity for several months.\n",
+    "it is only natural then that data science has started being applied to this area. Understanding\n",
+    "why and when employees are most likely to leave can lead to actions to improve employee\n",
+    "retention as well as planning new hiring in advance. This application of DS is sometimes called\n",
+    "people analytics or people data science (if you see a job title: people data scientist, this is your\n",
+    "job).\n",
+    "In this challenge, you have a data set with info about the employees and have to predict when\n",
+    "employees are going to quit by understanding the main drivers of employee churn.\n",
+    "1- What are the main factors that drive employee churn? Do they make sense? Explain your\n",
+    "findings.\n",
+    "2- If you could add to this data set just one variable that could help explain employee churn,\n",
+    "what would that be?"
+   ],
+   "id": "9f1bfa8d49a20efb"
+  },
+  {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
@@ -10,6 +31,9 @@
      "start_time": "2025-08-01T08:14:47.865854Z"
     }
    },
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 54,
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -21,8 +45,7 @@
     "import graphviz\n",
     "from sklearn.tree import plot_tree"
    ],
-   "outputs": [],
-   "execution_count": 54
+   "id": "initial_id"
   },
   {
    "metadata": {
@@ -1694,11 +1717,27 @@
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": [
+    "### Answer:\n",
+    "The top three factors that seem to drive employee churn are Monthly Income, OverTime, and Total Working Years. Basically, people who earn less, work overtime a lot, or are early in their careers are more likely to leave. This makes sense because if someone feels overworked and underpaid, they're more likely to look for something better. Also, newer employees might still be exploring their options, so they’re more likely to switch jobs. One surprising thing was that features like Age, Job Role, Distance from Home, and even Job Satisfaction didn’t play any role in predicting churn in this model"
+   ],
+   "id": "1ebb658cca0b5923"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "",
-   "id": "213c06f4852c0f67"
+   "id": "85ec6dd96cacfff1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Answer:\n",
+    "The top three factors that seem to drive employee churn are Monthly Income, OverTime, and Total Working Years. Basically, people who earn less, work overtime a lot, or are early in their careers are more likely to leave. This makes sense because if someone feels overworked and underpaid, they're more likely to look for something better. Also, newer employees might still be exploring their options, so they’re more likely to switch jobs. One surprising thing was that features like Age, Job Role, Distance from Home, and even Job Satisfaction didn’t play any role in predicting churn in this model"
+   ],
+   "id": "2a9c7fe2a456ba4c"
   }
  ],
  "metadata": {
